source/scanner/legacy/JingleParser.py
# Generated from JingleParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class JingleParser ( Parser ):

    grammarFileName = "JingleParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\"'", "'var'", "'arr'", "'con'", "'loc'", 
                     "'echo'", "'return'", "'if'", "'then'", "'and'", "'or'", 
                     "'in'", "'else'", "'elif'", "'while'", "'for'", "'true'", 
                     "'false'", "'fn'", "'class'", "'let'", "'bind'", "'trait'", 
                     "'def'", "'proto'", "'import'", "'from'", "'package'", 
                     "'as'", "'break'", "'abstract'", "'select'", "'input'", 
                     "'each'", "'new'", "'continue'", "'export'", "'include'", 
                     "'require'", "'summon'", "':='", "'='", "'=='", "'!='", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'<'", "'>'", "<INVALID>", "<INVALID>", "'!'", "'^'", 
                     "'%'", "'|'", "'||'", "'#'", "'&'", "'&&'", "'@'", 
                     "'@@'", "'|>'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "','", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'->'", "'<-'", "':'", "'.'", "'...'", "'++'", 
                     "'--'", "'float'", "'string'", "'bool'", "'null'", 
                     "'char'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "ENDSTATEMENT", "SEMICOLONTERMINATE", 
                      "SPEECHMARKS", "VAR", "ARRAY", "CONST", "LOCAL", "ECHO", 
                      "RETURN", "IF", "THEN", "AND", "OR", "IN", "ELSE", 
                      "ELSEIF", "WHILE", "FOR", "TRUE", "FALSE", "FUNCTION", 
                      "CLASS", "LET", "BIND", "TRAIT", "DEFINE", "PROTOCOL", 
                      "IMPORT", "FROM", "PACKAGE", "AS", "BREAK", "ABSTRACT", 
                      "SELECT", "INPUT", "EACH", "NEW", "CONTINUE", "EXPORT", 
                      "INCLUDE", "REQUIRE", "SUMMON", "WALRUS", "EQUALS", 
                      "EQEQ", "NOTEQUAL", "LTEQUALS", "GTEQUALS", "PLUS", 
                      "MINUS", "MULTIPLY", "DIVIDE", "LESSTHAN", "GREATERTHAN", 
                      "LESSTHANEQUAL", "MORETHANEQUAL", "BANG", "POWER", 
                      "MODULUS", "VERTICAL", "ORSYMBOL", "HASH", "AMBERSAND", 
                      "ANDSYMBOL", "ATSYMBOL", "ATTSYMBOL", "PIPE", "TYPE_INT", 
                      "TYPE_DECIMAL", "TYPE_STRING", "TYPE_BOOLEAN", "COMMA", 
                      "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LSQRBRACKET", 
                      "RSQRBRACKET", "ARROW", "BACKARROW", "COLON", "DOT", 
                      "ELLIPSIS", "PLUSPLUS", "MINUSMINUS", "FLOAT_IDENTIFIER", 
                      "STRING_IDENTIFIER", "BOOLEAN_IDENTIFIER", "NULL_IDENTIFIER", 
                      "CHAR_IDENTIFIER", "INT_LITERAL", "FLOAT_LITERAL", 
                      "IDENTIFIER", "COMMENT", "STRING", "NUMBER", "INTEGER", 
                      "STRING_LITERAL", "BYTES_LITERAL", "DECIMAL_INTEGER", 
                      "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER", "FLOAT_NUMBER", 
                      "IMAG_NUMBER", "SKIP_", "UNKNOWN_CHAR", "NEWLINE" ]

    RULE_top_level_decl = 0
    RULE_end_of_statement = 1
    RULE_attributes = 2
    RULE_attribute = 3
    RULE_attribute_list = 4
    RULE_operator = 5
    RULE_statements = 6
    RULE_block = 7
    RULE_param_list = 8
    RULE_param = 9
    RULE_expression = 10
    RULE_main_expression = 11
    RULE_unary_expression = 12
    RULE_operand = 13
    RULE_literal = 14
    RULE_statement = 15
    RULE_declaration = 16
    RULE_var_declaration = 17
    RULE_var_declaration_prefix = 18
    RULE_var_declaration_keyword = 19
    RULE_function_declaration = 20
    RULE_function_declaration_prefix = 21
    RULE_class_declaration = 22
    RULE_class_declaration_prefix = 23
    RULE_trait_declaration = 24
    RULE_trait_declaration_prefix = 25
    RULE_trait_block = 26
    RULE_trait_block_body = 27
    RULE_property_declaration = 28
    RULE_property_declaration_prefix = 29
    RULE_import_declaration = 30
    RULE_import_name_direct = 31
    RULE_import_from = 32
    RULE_static_var_declaration = 33
    RULE_static_var_declaration_prefix = 34
    RULE_loop_statement = 35
    RULE_for_statement = 36
    RULE_while_statement = 37
    RULE_control_statement = 38
    RULE_if_statement = 39
    RULE_else_statement = 40

    ruleNames =  [ "top_level_decl", "end_of_statement", "attributes", "attribute", 
                   "attribute_list", "operator", "statements", "block", 
                   "param_list", "param", "expression", "main_expression", 
                   "unary_expression", "operand", "literal", "statement", 
                   "declaration", "var_declaration", "var_declaration_prefix", 
                   "var_declaration_keyword", "function_declaration", "function_declaration_prefix", 
                   "class_declaration", "class_declaration_prefix", "trait_declaration", 
                   "trait_declaration_prefix", "trait_block", "trait_block_body", 
                   "property_declaration", "property_declaration_prefix", 
                   "import_declaration", "import_name_direct", "import_from", 
                   "static_var_declaration", "static_var_declaration_prefix", 
                   "loop_statement", "for_statement", "while_statement", 
                   "control_statement", "if_statement", "else_statement" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    ENDSTATEMENT=3
    SEMICOLONTERMINATE=4
    SPEECHMARKS=5
    VAR=6
    ARRAY=7
    CONST=8
    LOCAL=9
    ECHO=10
    RETURN=11
    IF=12
    THEN=13
    AND=14
    OR=15
    IN=16
    ELSE=17
    ELSEIF=18
    WHILE=19
    FOR=20
    TRUE=21
    FALSE=22
    FUNCTION=23
    CLASS=24
    LET=25
    BIND=26
    TRAIT=27
    DEFINE=28
    PROTOCOL=29
    IMPORT=30
    FROM=31
    PACKAGE=32
    AS=33
    BREAK=34
    ABSTRACT=35
    SELECT=36
    INPUT=37
    EACH=38
    NEW=39
    CONTINUE=40
    EXPORT=41
    INCLUDE=42
    REQUIRE=43
    SUMMON=44
    WALRUS=45
    EQUALS=46
    EQEQ=47
    NOTEQUAL=48
    LTEQUALS=49
    GTEQUALS=50
    PLUS=51
    MINUS=52
    MULTIPLY=53
    DIVIDE=54
    LESSTHAN=55
    GREATERTHAN=56
    LESSTHANEQUAL=57
    MORETHANEQUAL=58
    BANG=59
    POWER=60
    MODULUS=61
    VERTICAL=62
    ORSYMBOL=63
    HASH=64
    AMBERSAND=65
    ANDSYMBOL=66
    ATSYMBOL=67
    ATTSYMBOL=68
    PIPE=69
    TYPE_INT=70
    TYPE_DECIMAL=71
    TYPE_STRING=72
    TYPE_BOOLEAN=73
    COMMA=74
    LBRACKET=75
    RBRACKET=76
    LBRACE=77
    RBRACE=78
    LSQRBRACKET=79
    RSQRBRACKET=80
    ARROW=81
    BACKARROW=82
    COLON=83
    DOT=84
    ELLIPSIS=85
    PLUSPLUS=86
    MINUSMINUS=87
    FLOAT_IDENTIFIER=88
    STRING_IDENTIFIER=89
    BOOLEAN_IDENTIFIER=90
    NULL_IDENTIFIER=91
    CHAR_IDENTIFIER=92
    INT_LITERAL=93
    FLOAT_LITERAL=94
    IDENTIFIER=95
    COMMENT=96
    STRING=97
    NUMBER=98
    INTEGER=99
    STRING_LITERAL=100
    BYTES_LITERAL=101
    DECIMAL_INTEGER=102
    OCT_INTEGER=103
    HEX_INTEGER=104
    BIN_INTEGER=105
    FLOAT_NUMBER=106
    IMAG_NUMBER=107
    SKIP_=108
    UNKNOWN_CHAR=109
    NEWLINE=110

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Top_level_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(JingleParser.StatementsContext,0)


        def getRuleIndex(self):
            return JingleParser.RULE_top_level_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTop_level_decl" ):
                listener.enterTop_level_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTop_level_decl" ):
                listener.exitTop_level_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTop_level_decl" ):
                return visitor.visitTop_level_decl(self)
            else:
                return visitor.visitChildren(self)




    def top_level_decl(self):

        localctx = JingleParser.Top_level_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_top_level_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JingleParser.VAR) | (1 << JingleParser.CONST) | (1 << JingleParser.IF) | (1 << JingleParser.WHILE) | (1 << JingleParser.FOR) | (1 << JingleParser.FUNCTION) | (1 << JingleParser.CLASS) | (1 << JingleParser.BIND) | (1 << JingleParser.TRAIT) | (1 << JingleParser.IMPORT) | (1 << JingleParser.FROM) | (1 << JingleParser.PLUS) | (1 << JingleParser.MINUS) | (1 << JingleParser.MULTIPLY) | (1 << JingleParser.BANG) | (1 << JingleParser.POWER))) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & ((1 << (JingleParser.AMBERSAND - 65)) | (1 << (JingleParser.ATTSYMBOL - 65)) | (1 << (JingleParser.BACKARROW - 65)) | (1 << (JingleParser.STRING - 65)) | (1 << (JingleParser.NUMBER - 65)))) != 0):
                self.state = 82
                self.statements()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class End_of_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENDSTATEMENT(self):
            return self.getToken(JingleParser.ENDSTATEMENT, 0)

        def SEMICOLONTERMINATE(self):
            return self.getToken(JingleParser.SEMICOLONTERMINATE, 0)

        def EOF(self):
            return self.getToken(JingleParser.EOF, 0)

        def getRuleIndex(self):
            return JingleParser.RULE_end_of_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd_of_statement" ):
                listener.enterEnd_of_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd_of_statement" ):
                listener.exitEnd_of_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnd_of_statement" ):
                return visitor.visitEnd_of_statement(self)
            else:
                return visitor.visitChildren(self)




    def end_of_statement(self):

        localctx = JingleParser.End_of_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_end_of_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not(((((_la - -1)) & ~0x3f) == 0 and ((1 << (_la - -1)) & ((1 << (JingleParser.EOF - -1)) | (1 << (JingleParser.ENDSTATEMENT - -1)) | (1 << (JingleParser.SEMICOLONTERMINATE - -1)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JingleParser.AttributeContext)
            else:
                return self.getTypedRuleContext(JingleParser.AttributeContext,i)


        def getRuleIndex(self):
            return JingleParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributes" ):
                return visitor.visitAttributes(self)
            else:
                return visitor.visitChildren(self)




    def attributes(self):

        localctx = JingleParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.attribute()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JingleParser.ATTSYMBOL):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATTSYMBOL(self):
            return self.getToken(JingleParser.ATTSYMBOL, 0)

        def IDENTIFIER(self):
            return self.getToken(JingleParser.IDENTIFIER, 0)

        def LBRACKET(self):
            return self.getToken(JingleParser.LBRACKET, 0)

        def attribute_list(self):
            return self.getTypedRuleContext(JingleParser.Attribute_listContext,0)


        def RBRACKET(self):
            return self.getToken(JingleParser.RBRACKET, 0)

        def getRuleIndex(self):
            return JingleParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = JingleParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(JingleParser.ATTSYMBOL)
            self.state = 93
            self.match(JingleParser.IDENTIFIER)
            self.state = 94
            self.match(JingleParser.LBRACKET)
            self.state = 95
            self.attribute_list()
            self.state = 96
            self.match(JingleParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JingleParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(JingleParser.ExpressionContext,0)


        def literal(self):
            return self.getTypedRuleContext(JingleParser.LiteralContext,0)


        def operator(self):
            return self.getTypedRuleContext(JingleParser.OperatorContext,0)


        def getRuleIndex(self):
            return JingleParser.RULE_attribute_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_list" ):
                listener.enterAttribute_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_list" ):
                listener.exitAttribute_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_list" ):
                return visitor.visitAttribute_list(self)
            else:
                return visitor.visitChildren(self)




    def attribute_list(self):

        localctx = JingleParser.Attribute_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute_list)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(JingleParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.expression(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.literal()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.operator()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(JingleParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(JingleParser.MINUS, 0)

        def MULTIPLY(self):
            return self.getToken(JingleParser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(JingleParser.DIVIDE, 0)

        def POWER(self):
            return self.getToken(JingleParser.POWER, 0)

        def EQUALS(self):
            return self.getToken(JingleParser.EQUALS, 0)

        def BANG(self):
            return self.getToken(JingleParser.BANG, 0)

        def MODULUS(self):
            return self.getToken(JingleParser.MODULUS, 0)

        def AMBERSAND(self):
            return self.getToken(JingleParser.AMBERSAND, 0)

        def VERTICAL(self):
            return self.getToken(JingleParser.VERTICAL, 0)

        def LESSTHAN(self):
            return self.getToken(JingleParser.LESSTHAN, 0)

        def GREATERTHAN(self):
            return self.getToken(JingleParser.GREATERTHAN, 0)

        def getRuleIndex(self):
            return JingleParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = JingleParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not(((((_la - 46)) & ~0x3f) == 0 and ((1 << (_la - 46)) & ((1 << (JingleParser.EQUALS - 46)) | (1 << (JingleParser.PLUS - 46)) | (1 << (JingleParser.MINUS - 46)) | (1 << (JingleParser.MULTIPLY - 46)) | (1 << (JingleParser.DIVIDE - 46)) | (1 << (JingleParser.LESSTHAN - 46)) | (1 << (JingleParser.GREATERTHAN - 46)) | (1 << (JingleParser.BANG - 46)) | (1 << (JingleParser.POWER - 46)) | (1 << (JingleParser.MODULUS - 46)) | (1 << (JingleParser.VERTICAL - 46)) | (1 << (JingleParser.AMBERSAND - 46)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JingleParser.StatementContext)
            else:
                return self.getTypedRuleContext(JingleParser.StatementContext,i)


        def getRuleIndex(self):
            return JingleParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = JingleParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.statement()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JingleParser.VAR) | (1 << JingleParser.CONST) | (1 << JingleParser.IF) | (1 << JingleParser.WHILE) | (1 << JingleParser.FOR) | (1 << JingleParser.FUNCTION) | (1 << JingleParser.CLASS) | (1 << JingleParser.BIND) | (1 << JingleParser.TRAIT) | (1 << JingleParser.IMPORT) | (1 << JingleParser.FROM) | (1 << JingleParser.PLUS) | (1 << JingleParser.MINUS) | (1 << JingleParser.MULTIPLY) | (1 << JingleParser.BANG) | (1 << JingleParser.POWER))) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & ((1 << (JingleParser.AMBERSAND - 65)) | (1 << (JingleParser.ATTSYMBOL - 65)) | (1 << (JingleParser.BACKARROW - 65)) | (1 << (JingleParser.STRING - 65)) | (1 << (JingleParser.NUMBER - 65)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(JingleParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(JingleParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(JingleParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JingleParser.StatementContext)
            else:
                return self.getTypedRuleContext(JingleParser.StatementContext,i)


        def getRuleIndex(self):
            return JingleParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = JingleParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(JingleParser.NEWLINE)
            self.state = 112
            self.match(JingleParser.INDENT)
            self.state = 114 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 113
                self.statement()
                self.state = 116 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JingleParser.VAR) | (1 << JingleParser.CONST) | (1 << JingleParser.IF) | (1 << JingleParser.WHILE) | (1 << JingleParser.FOR) | (1 << JingleParser.FUNCTION) | (1 << JingleParser.CLASS) | (1 << JingleParser.BIND) | (1 << JingleParser.TRAIT) | (1 << JingleParser.IMPORT) | (1 << JingleParser.FROM) | (1 << JingleParser.PLUS) | (1 << JingleParser.MINUS) | (1 << JingleParser.MULTIPLY) | (1 << JingleParser.BANG) | (1 << JingleParser.POWER))) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & ((1 << (JingleParser.AMBERSAND - 65)) | (1 << (JingleParser.ATTSYMBOL - 65)) | (1 << (JingleParser.BACKARROW - 65)) | (1 << (JingleParser.STRING - 65)) | (1 << (JingleParser.NUMBER - 65)))) != 0)):
                    break

            self.state = 118
            self.match(JingleParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JingleParser.ParamContext)
            else:
                return self.getTypedRuleContext(JingleParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JingleParser.COMMA)
            else:
                return self.getToken(JingleParser.COMMA, i)

        def getRuleIndex(self):
            return JingleParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = JingleParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.param()
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 121
                    self.match(JingleParser.COMMA)
                    self.state = 122
                    self.param() 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JingleParser.COMMA:
                self.state = 128
                self.match(JingleParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JingleParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = JingleParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
